Fixed background Image not showing

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@ body {
 *{
   margin: 0;
   padding: 0;
+  color: #4e48b4;
 }
 
 #main{
@@ -49,6 +50,11 @@ textarea{
   border: none;
   border-radius: 15px;
   padding: 5px;
+}
+::placeholder {
+  color: #4e48b4;
+  padding: 10px;
+  opacity: 0.5;
 }
 
 input:focus, textarea:focus{
